# SimpleML

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
configs/: dino.yaml  dino_detection.yaml
desktop/: build.sh  dev.sh  run_server.sh
desktop/backend/: server.py
desktop/frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
desktop/frontend/src/: App.jsx  components.jsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
examples/: api_example.py  cifar10.yaml  example.yaml  inference_example.py
simpleml/: __init__.py  __main__.py  api.py  logger.py  registries.py  registry.py
simpleml/configs/: __init__.py  config.py
simpleml/datasets/: __init__.py  coco_classification.py  coco_detection.py  image_folder.py
simpleml/inference/: __init__.py  predictor.py
simpleml/losses/: __init__.py  bce_with_logits.py  cross_entropy.py  focal.py  ntxent.py  supcon.py  triplet.py
simpleml/metrics/: __init__.py  _detection_utils.py  accuracy.py  auroc.py  base.py  confusion_matrix.py  corloc.py  f1_score.py  mean_average_precision.py  precision.py  recall.py
simpleml/models/: __init__.py  resnet.py  timm_model.py
simpleml/models/vit/: __init__.py  attention.py  block.py  mlp.py  patch_embed.py  vit.py
simpleml/optimizers/: __init__.py  adam.py  adamw.py  cosine_annealing.py  cosine_annealing_warm_restarts.py  one_cycle.py  rmsprop.py  sgd.py  step_lr.py
simpleml/trainers/: __init__.py  trainer.py
tests/: test_configs.py  test_datasets.py  test_inference.py  test_losses.py  test_metrics.py  test_models.py  test_optimizers.py  test_registry.py  test_trainers.py
tests/models/vit/: test_attention.py  test_block.py  test_mlp.py  test_patch_embed.py  test_vit.py
(+5 files in other folders)
