[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simpleml"
version = "0.1.0"
description = "A modular ML training framework with registry-based composable modules"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "tensorboard>=2.14",
    "pyyaml>=6.0",
    "timm>=1.0",
    "albumentations>=1.3",
    "Pillow>=9.0",
    "tqdm>=4.64",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]
desktop = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.0",
]

[tool.setuptools.packages.find]
include = ["simpleml*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"simpleml/datasets/image_folder.py" = ["N812"]
"simpleml/optimizers/cosine_annealing.py" = ["N803"]
"simpleml/optimizers/cosine_annealing_warm_restarts.py" = ["N803"]
"tests/test_datasets.py" = ["N812"]

[tool.pytest.ini_options]
testpaths = ["tests"]